@@ -33,7 +33,7 @@
 {
     <FONT color=#0000ff>// Simplest possible options parsing: we just require two or more
     // parameters.</FONT>
-    <B><FONT color=#a52a2a>if</FONT></B>(argc &lt; <FONT color=#ff00ff>3</FONT>) {
+    <B><FONT color=#a52a2a>if</FONT></B> (argc &lt; <FONT color=#ff00ff>3</FONT>) {
         cout &lt;&lt; <FONT color=#ff00ff>&quot;usage: &quot;</FONT> &lt;&lt; argv[<FONT color=#ff00ff>0</FONT>] &lt;&lt;
                 <FONT color=#ff00ff>&quot; &lt;path to database&gt; &lt;search terms&gt;&quot;</FONT> &lt;&lt; endl;
         exit(<FONT color=#ff00ff>1</FONT>);
